# CloudCompare

./: .gitignore  crash.txt
plugins/qPotassePlugin/: CMakeLists.txt  qPotasseCell.cpp  qPotasseCell.h  qPotasseDialog.cpp  qPotasseDialog.h  qPotassePlugin.cpp  qPotassePlugin.h  qPotassePlugin.qrc
plugins/qPotassePlugin/potasse/: CMakeLists.txt
plugins/qPotassePlugin/potasse/header/potasse/cloud/: .box.hpp.un~  .cloud.hpp.un~  .normal.hpp.un~  .point.hpp.un~  boundingBox.hpp  cloud.hpp  normal.hpp  vertex.hpp
plugins/qPotassePlugin/potasse/header/potasse/detector/: .cylinderDetector.hpp.un~  .detector.hpp.un~  .exception.hpp.un~  .graph.hpp.un~  .plane.hpp.un~  .planeDetector.hpp.un~  .shape.hpp.un~  .shapeDetector.hpp.un~  .sphereDetector.hpp.un~  .tree.hpp.un~  cylinderDetector.hpp  detector.hpp  exception.hpp  graph.hpp  plane.hpp  planeDetector.hpp  shapeDetector.hpp  sphereDetector.hpp  tree.hpp
plugins/qPotassePlugin/potasse/header/potasse/estimator/: .closestLineToNLinesWithGivenDirection.hpp.un~  .closestPointToNLines.hpp.un~  .exception.hpp.un~  .mostOrthogonalVectorToNVectors.hpp.un~  .neighbors.hpp.un~  .neighborsEstimator.hpp.un~  .normalEstimator.hpp.un~  .normals.hpp.un~  .normalsEstimator.hpp.un~  closestLineToNLinesGivenItsDirection.hpp  closestLineToNLinesWithGivenDirection.hpp  closestVertexToNLines.hpp  closestVertexToNPlanes.hpp  exception.hpp  (+7 more)
plugins/qPotassePlugin/potasse/include/: CMakeLists.txt
plugins/qPotassePlugin/potasse/source/: boundingBox.cpp  closestLineToNLinesGivenItsDirection.cpp  closestLineToNLinesWithGivenDirection.cpp  closestVertexToNLines.cpp  closestVertexToNPlanes.cpp  cloud.cpp  cone.cpp  coneDetector.cpp  cylinder.cpp  cylinderDetector.cpp  cylinderEstimator.cpp  detector.cpp  exception.cpp  graph.cpp  line.cpp  mostOrthogonalVectorToNVectors.cpp  neighborsEstimator.cpp  normal.cpp  normalsEstimator.cpp  plane.cpp  planeDetector.cpp  planeEstimator.cpp  shape.cpp  shapeDetector.cpp  sphere.cpp  sphereDetector.cpp  sphereEstimator.cpp  tree.cpp  vertex.cpp
plugins/qPotassePlugin/shape/: plane.h  shape.h
plugins/qPotassePlugin/shapeDetector/: planeDetector.cpp  planeDetector.h  shapeDetector.cpp  shapeDetector.h
(+35 files in other folders)
