PROJECT(potasse)

#SET(CMAKE_CXX_STANDARD 11)
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -pipe")

ADD_SUBDIRECTORY(include)

FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)

FILE(GLOB source source/*)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${source})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/header>
  PUBLIC ${EIGEN3_INCLUDE_DIR}
  PUBLIC ${FLANN_INCLUDE_DIR}
  )

#Needed because of Eigen3.
TARGET_COMPILE_OPTIONS(${PROJECT_NAME}
  PUBLIC ${OpenMP_CXX_FLAGS}
  PUBLIC -Wno-deprecated-declarations 
  PUBLIC -Wno-ignored-attributes
  PUBLIC -Wno-misleading-indentation 
  )

